welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime2.ZigZag'
override def run() {
             ^